fix: fixed width of horse name box so it's aligned nicely with instructions

--- a/css/ui.css
+++ b/css/ui.css
@@ -42,7 +42,7 @@
 
 #horseName {
   height: 29px;
-  width: 245px;
+  width: 100%;
 
   text-align: center;
   padding: 5px 20px;
